--- a/src/app/create-item/create-item.component.html
+++ b/src/app/create-item/create-item.component.html
@@ -8,3 +8,11 @@
     <button type="submit" (click)="createItem( createForm, $event )">Add</button>
   </form>
 </section>
+<section>
+  <div class="title">
+    Filter by
+  </div>
+  <div class="filters">
+    <input type="text" (input)="filterByTitle($event)">
+  </div>
+</section>
