filters are functional now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,7 @@
 <main>
   <aside class="manage-container">
     <section class="create-item-container">
-      <app-create-item></app-create-item>
-    </section>
-    <section>
-      FILTERS
+      <app-manage></app-manage>
     </section>
   </aside>
   <article class="todo-container">
