--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -14,5 +14,6 @@
   </div>
   <div class="filters">
     <input type="text" (input)="filterByTitle($event)">
+    <input type="text" (input)="filterByDate($event)">
   </div>
 </section>
