--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,8 +53,10 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+
     .number {
       position: absolute;
+      user-select: none;
     }
     &.active {
       color: #ffffff;
@@ -65,6 +67,17 @@ main {
       background: rgba(0, 0, 0, 0.2);
     }
   }
+}
 
+.edit {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 }
 
