--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
-<div class="card" (click)="edit($event)">
-  <span class="remove" (click)="remove($event)">
+<div class="card" (click)="editItem($event)">
+  <span class="remove" (click)="removeItem($event)">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
       <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
       <path d="M0 0h24v24H0z" fill="none"/>
@@ -9,6 +9,6 @@
   <div class="description">{{item.description}}</div>
   <div class="date">
     <span>Added </span>
-    <time>{{item.getCreatedAt | date:'yyyy-dd-MM, h:mm a'}}</time>
+    <time>{{item.created_at | date:'yyyy-dd-MM, h:mm a'}}</time>
   </div>
 </div>
