--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -16,11 +16,9 @@
   flex-flow: column;
   justify-content: space-between;
   text-overflow: ellipsis;
-  padding: 1rem;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 0.25rem;
   cursor: pointer;
   user-select: none;
+  @include card;
 }
 
 .title {
@@ -51,7 +49,7 @@
 }
 
 .description {
-  height: 6rem;
+  height: 5.8rem;
   overflow: hidden;
   text-overflow: ellipsis;
 }
