--- a/src/app/manage/manage.component.scss
+++ b/src/app/manage/manage.component.scss
@@ -5,7 +5,10 @@ section {
 form {
   display: flex;
   flex-flow: column;
-  input {
-    margin: 1rem 0;
-  }
+  align-items: center;
+}
+
+.filters {
+  display: flex;
+  flex-flow: column;
 }
