--- a/src/app/manage/manage.component.scss
+++ b/src/app/manage/manage.component.scss
@@ -1,7 +1,39 @@
+@import '../../styles/vars';
+.mobile-header {
+  display: none;
+  @include mobile {
+    display: flex;
+    height: 3rem;
+    margin-bottom: 0.5rem;
+    justify-content: flex-end;
+  }
+}
 section {
   display: flex;
   flex-flow: column;
+  @include mobile {
+    position: fixed;
+    opacity: 0;
+    z-index: -1;
+    @include card;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    max-height: 24rem;
+    width: 85%;
+    margin: auto;
+    &.active {
+      opacity: 1;
+      z-index: 10;
+    }
+  }
 }
+.shadow {
+  z-index: 9;
+  @include shadow;
+}
+
 form {
   display: flex;
   flex-flow: column;
