--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,16 +15,16 @@
       <ng-container *ngFor="let todo of appService.todoArr[appService.page]; let i = index">
         <app-todo-item [item]="todo" [index]="i" (edit)="editInit($event)"></app-todo-item>
       </ng-container>
-    </section>
-    <section class="pagination">
-      <ng-container *ngFor="let page of appService.todoArr; let i = index">
-        <div class="page"
-             [ngClass]="{'active': i === appService.page}"
-             *ngIf="appService.todos.length / appService.itemsPerPage > 1"
-             (click)="appService.page = i">
-          <span class="number">{{i + 1}}</span>
-        </div>
-      </ng-container>
+      <div class="pagination">
+        <ng-container *ngFor="let page of appService.todoArr; let i = index">
+          <div class="page"
+               [ngClass]="{'active': i === appService.page}"
+               *ngIf="appService.todoArr.length > 1"
+               (click)="appService.page = i">
+            <span class="number">{{i + 1}}</span>
+          </div>
+        </ng-container>
+      </div>
     </section>
   </article>
 </main>
