--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,12 +6,10 @@ main {
   padding: 1rem;
   height: 100vh;
   box-sizing: border-box;
+  align-content: flex-start;
   @include mobile {
     padding: 0.5rem;
   }
-}
-
-.create-item-container {
 }
 
 .manage-container {
@@ -20,6 +18,7 @@ main {
   padding-right: 1rem;
   @include mobile {
     flex-basis: 100%;
+    padding-right: 0;
   }
 }
 
@@ -30,6 +29,7 @@ main {
   justify-content: center;
   @include mobile {
     flex-basis: 100%;
+    padding-bottom: 1rem;
   }
 
   .todos {
@@ -42,7 +42,14 @@ main {
 
   .pagination {
     display: flex;
-
+    position: absolute;
+    bottom: 1rem;
+    @include mobile {
+      bottom: auto;
+      top: 1rem;
+      max-width: 60%;
+      overflow-x: scroll;
+    }
   }
   .page {
     border-radius: 0.25rem;
@@ -52,7 +59,10 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    bottom: 1rem;
+    @include mobile {
+      min-width: 2rem;
+    }
     .number {
       position: absolute;
       user-select: none;
@@ -74,9 +84,6 @@ main {
   right: 0;
   bottom: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 10;
 }
 
