--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,4 +1,19 @@
-<section>
+<header class="mobile-header">
+  <button class="mobile-icon-button potato-button potato-button__icon"
+          (click)="toggleCreate = !toggleCreate">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/><path d="M0 0h24v24H0z" fill="none"/>
+    </svg>
+  </button>
+  <button class="mobile-icon-button potato-button potato-button__icon"
+          (click)="toggleFilters = !toggleFilters">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"/>
+      <path d="M0 0h24v24H0z" fill="none"/>
+    </svg>
+  </button>
+</header>
+<section class="create-container" [ngClass]="{'active': toggleCreate}">
   <div class="title">
     Add new Todo item
   </div>
@@ -20,18 +35,19 @@
     <button class="potato-button potato-button__flat" type="submit" (click)="createItem( createForm, $event )">Create</button>
   </form>
 </section>
-<section>
+<section class="filters-container" [ngClass]="{'active': toggleFilters}">
   <div class="title">
     Filter by
   </div>
   <div class="filters">
-    <div class="potato-input">
-      <input id="filter-title" type="text" (input)="filterByTitle($event)">
+    <div class="potato-input" [ngClass]="{'potato-input__filled': filterTitle.value}">
+      <input #filterTitle id="filter-title" type="text" (input)="filterByTitle($event)">
       <label for="filter-title">Title</label>
     </div>
-    <div class="potato-input">
-      <input id="filter-date" type="text" (input)="filterByDate($event)">
+    <div class="potato-input" [ngClass]="{'potato-input__filled': filterDescription.value}">
+      <input #filterDescription id="filter-date" type="text" (input)="filterByDate($event)">
       <label for="filter-date">Date</label>
     </div>
   </div>
 </section>
+<div class="shadow" (click)="toggleCreate = toggleFilters = false" *ngIf="toggleCreate || toggleFilters"></div>
