--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -7,6 +7,7 @@
   max-width: 20rem;
   @include mobile {
     flex-basis: 49%;
+    margin: 0 0 0.5rem;
   }
 }
 
@@ -21,6 +22,16 @@
   @include card;
   &:hover {
     background: rgba(0,0,0,0.01);
+  }
+  @include mobile {
+    .date {
+      white-space: nowrap;
+      text-overflow: clip;
+      overflow: hidden;
+      span {
+        display: none;
+      }
+    }
   }
 }
 
@@ -48,6 +59,11 @@
   svg {
     width: 100%;
     height: 100%;
+  }
+
+  @include mobile {
+    right: 0;
+    top: 0;
   }
 }
 
