--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,5 +14,110 @@ body {
   font-weight: 700;
 }
 
-@include input;
-@include button;
+.potato-input {
+  position: relative;
+  margin: 0.5rem 0;
+  display: flex;
+  width: 100%;
+
+  textarea {
+    resize: none;
+    height: 12rem;
+  }
+
+  input, textarea {
+    width: 100%;
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.3);
+    border: none;
+    padding: 0.75rem;
+    outline: none;
+    background: #ffffff;
+    transition: 100ms ease;
+    &:focus + label {
+      top: -0.75rem;
+      background: linear-gradient(to top, transparent 1%,transparent 45%,$background 45%,$background 45%,$background 100%);
+      transform: scale(0.8);
+      font-weight: 700;
+      color: $blue;
+    }
+    &:focus, &.potato-input__filled {
+      box-shadow: inset 0 0 0 2px $blue;
+    }
+  }
+
+  label {
+    transform: scale(1);
+    top: 0.5rem;
+    left: 0.25rem;
+    position: absolute;
+    transition: 100ms ease;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    color: rgba(0,0,0,0.6);
+    padding: 0.25rem 0.5rem;
+  }
+
+  &.potato-input__white-background {
+    input + label, textarea + label {
+      background: linear-gradient(to top, transparent 1%,transparent 45%,#ffffff 45%,#ffffff 45%,#ffffff 100%);
+    }
+  }
+
+  &.potato-input__filled {
+    input, textarea {
+      box-shadow: inset 0 0 0 2px $blue;
+    }
+    label {
+      top: -0.75rem;
+      background: linear-gradient(to top, transparent 1%,transparent 45%,$background 45%,$background 45%,$background 100%);
+      transform: scale(0.8);
+      font-weight: 700;
+      color: $blue;
+    }
+  }
+}
+.potato-button {
+  border-radius: 0.25rem;
+  border: none;
+  outline: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 150ms ease;
+  font-weight: 500;
+
+  &__flat {
+    background: none;
+    color: $blue;
+    padding: 0.5rem 1rem;
+    &:hover {
+      background: rgba(0,0,0,0.05);
+    }
+    &:active {
+      background: rgba(49,38,255,0.4);
+    }
+  }
+  &__raised {
+    background: $blue;
+    color: #ffffff;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    padding: 0.5rem 1rem;
+  }
+  &__icon {
+    background: none;
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover {
+      background: rgba(0,0,0,0.05);
+    }
+    &:active {
+      background: rgba(0,0,0,0.2);
+    }
+  }
+}
+
+
