--- a/src/app/manage/manage.component.scss
+++ b/src/app/manage/manage.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/vars';
 .mobile-header {
   display: none;
-  @include mobile {
+  @include mobile-and-tablet {
     display: flex;
     height: 3rem;
     margin-bottom: 0.5rem;
@@ -11,7 +11,7 @@
 section {
   display: flex;
   flex-flow: column;
-  @include mobile {
+  @include mobile-and-tablet {
     position: fixed;
     opacity: 0;
     z-index: -1;
@@ -21,12 +21,18 @@ section {
     bottom: 0;
     top: 0;
     max-height: 24rem;
-    width: 85%;
+
     margin: auto;
     &.active {
       opacity: 1;
       z-index: 10;
     }
+  }
+  @include mobile {
+    width: 85%;
+  }
+  @include tablet {
+    width: 25rem;
   }
 }
 .shadow {
