--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -1,13 +1,17 @@
 @import '../../styles/vars';
 
 :host {
-  margin: 0 0 1rem 0.5rem;
+  margin-bottom:1rem;
   position: relative;
   width: 23%;
   max-width: 20rem;
   @include mobile {
     flex-basis: 49%;
-    margin: 0 0 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  @include tablet {
+    flex-basis: 31%;
+    margin-bottom: 0.5rem;
   }
 }
 
@@ -23,7 +27,7 @@
   &:hover {
     background: rgba(0,0,0,0.01);
   }
-  @include mobile {
+  @include mobile-and-tablet {
     .date {
       white-space: nowrap;
       text-overflow: clip;
