--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,9 @@ main {
   @include mobile {
     padding: 0.5rem;
   }
+  &.overflow {
+    overflow: hidden;
+  }
 }
 
 .manage-container {
@@ -38,6 +41,10 @@ main {
     justify-content: space-between;
     align-content: flex-start;
     flex-basis: 100%;
+    position: relative;
+    @include mobile-and-tablet {
+      position: inherit;
+    }
   }
 
   .pagination {
